--- a/part-3/22-checkout/index.html
+++ b/part-3/22-checkout/index.html
@@ -37,7 +37,29 @@
         <div class="checkout">
           <h2 class="checkout__title">Checkout</h2>
           <form method="GET" id="checkout-form" class="checkout__form">
-            <!-- Add the form fields here -->
+            <label for="name">Customer name</label><br /><br />
+            <input
+              type="text"
+              name="customer-name"
+              id="name"
+              style="width: 90%;"
+            /><br /><br /><br />
+
+            <label for="email">Customer email</label><br /><br />
+            <input
+              type="email"
+              name="customer-email"
+              id="email"
+              style="width: 90%;"
+            /><br /><br /><br />
+
+            <label for="phone">Customer Phone number</label><br /><br />
+            <input
+              type="tel"
+              name="customer-phone"
+              id="phone"
+              style="width: 90%;"
+            /><br /><br /><br />
 
             <button type="submit">Complete Purchase</button>
           </form>
