--- a/part-3/23-comments/index.html
+++ b/part-3/23-comments/index.html
@@ -30,8 +30,11 @@
 
         <div class="comments">
           <p>Add your comments and let us know what you think!</p>
-
-          <!-- Your comment form goes here -->
+          <form method="GET">
+            <label for="review">Add Your Message</label><br /><br />
+            <textarea id="review" rows="10" cols="70">comment</textarea><br /><br />
+            <button type="submit">Send Comment</button>
+          </form>
         </div>
       </main>
     </div>
