--- a/part-3/24-dietary/index.html
+++ b/part-3/24-dietary/index.html
@@ -19,7 +19,33 @@
         </p>
 
         <form>
-          <!-- Your multiple choice goes here -->
+          <fieldset>
+            <legend>Please select all of your dietary requirements</legend>
+
+            <label> <input type="checkbox" id="dietary" name="Halal" />Halal </label>
+            <br />
+            <br />
+
+            <label> <input type="checkbox" id="dietary" name="Kosher" />Kosher </label>
+            <br />
+            <br />
+
+            <label> <input type="checkbox" id="dietary" name="Vegetarian" />Vegetarian </label>
+            <br />
+            <br />
+
+            <label> <input type="checkbox" id="dietary" name="Vegan" />Vegan </label>
+            <br />
+            <br />
+
+            <label> <input type="checkbox" id="dietary" name="Gluten Free" />Gluten Free </label>
+            <br />
+            <br />
+          </fieldset>
+
+          <br />
+          <br />
+
           <button type="submit">Submit</button>
         </form>
       </main>
