Completed 26-checkout-groups

--- a/part-3/26-checkout-groups/index.html
+++ b/part-3/26-checkout-groups/index.html
@@ -39,6 +39,61 @@
           <form method="GET" id="checkout-form" class="checkout__form">
             <!-- Add the form fields here -->
 
+            <fieldset>
+              <legend>Billing Address</legend>
+
+              <label for="line1">Address Line 1</label>
+              <input type="text" id="line1" />
+
+              <br />
+              <br />
+
+              <label for="line2">Address Line 2</label>
+              <input type="text" id="line2" />
+
+              <br />
+              <br />
+
+              <label for="Postcode">Postcode</label>
+              <input type="text" id="Postcode" />
+
+              <br />
+              <br />
+
+              <label for="City">City</label>
+              <input type="text" id="City" />
+            </fieldset>
+            <br />
+            <br />
+            <br />
+
+            <fieldset>
+              <legend>Delivery Address</legend>
+
+              <label for="line1">Address Line 1</label>
+              <input type="text" id="line1" />
+
+              <br />
+              <br />
+
+              <label for="line2">Address Line 2</label>
+              <input type="text" id="line2" />
+
+              <br />
+              <br />
+
+              <label for="Postcode">Postcode</label>
+              <input type="text" id="Postcode" />
+
+              <br />
+              <br />
+
+              <label for="City">City</label>
+              <input type="text" id="City" />
+            </fieldset>
+
+            <br />
+            <br />
             <button type="submit">Complete Purchase</button>
           </form>
         </div>
