Completed 29-combined-skills

--- a/part-3/29-combined-skills/about.html
+++ b/part-3/29-combined-skills/about.html
@@ -62,7 +62,7 @@
             phasellus faucibus scelerisque eleifend donec pretium. Non tellus orci ac auctor augue
             mauris. In aliquam sem fringilla ut. Cras tincidunt lobortis feugiat vivamus at augue.
             Posuere sollicitudin aliquam ultrices sagittis orci a. Commodo sed egestas egestas
-            fringilla phasellus faucibus scelerisque. Vulputate ut pharetra sit amet aliquam.
+            fringilla pshasellus faucibus scelerisque. Vulputate ut pharetra sit amet aliquam.
           </p>
 
           <p>
