--- a/part-3/29-combined-skills/contact.html
+++ b/part-3/29-combined-skills/contact.html
@@ -37,6 +37,9 @@
             data-prefix="fas"
             data-icon="search"
             class="svg-inline--fa fa-search fa-w-16"
+            width="20px"
+            height="20px"
+            style="margin-left: -125px;margin-top: 10px;"
             role="img"
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 512 512"
@@ -46,6 +49,7 @@
               d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
             ></path>
           </svg>
+          <br />
           <button type="submit">Submit</button>
         </form>
       </div>
@@ -55,15 +59,35 @@
         <p>Send us an email if you would like to contact us.</p>
         <form method="GET" class="contact-form">
           <div class="contact-form__field">
-            <label for="name">Name</label>
-            <input type="text" name="name" id="name" />
+            <label for="name">Name</label> <br /><br />
+
+            <input type="text" name="name" id="name" required /><br /><br />
           </div>
           <div class="contact-form__field">
+            <label for="email">Email</label><br />
+            <input type="email" name="email" id="email" required /><br /><br />
+          </div>
+          <div class="contact-form__field">
+            <label for="message">message</label><br />
             <textarea
               name="message"
+              id="message"
+              rows="10"
+              cols="31"
+              required
               placeholder="Your message should not be longer than 200 words."
-            ></textarea>
+            ></textarea
+            ><br />
           </div>
+          <br /><br />
+          <fieldset>
+            <legend>What branch are you interested in?</legend>
+            <input type="radio" name="branch" />London<br />
+            <input type="radio" name="branch" />Glasgow<br />
+            <input type="radio" name="branch" />Manchester<br /><br />
+          </fieldset>
+          <br />
+
           <button type="submit">Send</button>
         </form>
       </main>
@@ -83,6 +107,9 @@
             data-icon="search"
             class="svg-inline--fa fa-search fa-w-16"
             role="img"
+            width="20px"
+            height="20px"
+            style="margin-left: -125px;margin-top: 10px;"
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 512 512"
           >
